--- a/gb/24/8/25/n14317478.md
+++ b/gb/24/8/25/n14317478.md
@@ -5,49 +5,52 @@
 <h6></h6>
 <hr>
 	<p>【大纪元2024年08月25日讯】落马一年后，“70后”中共新疆党委政法委原副书记马国强被开除党籍。其长期在新疆阿克苏地区任职。近年来，多名阿克苏地区的官员被查，包括马国强曾经的上级、新疆政协副主席窦万贵等。</p>
+<p>除了马国强、窦万贵，2020年以来阿克苏地区还有多名官员落马。</p>
 <p>据《新疆日报》消息，8月24日，十届新疆党委十二次全会表决通过了关于追认给予马国强开除党籍处分的决定。</p>
 <p>去年8月31日，新疆官方发消息称，时任新疆党委政法委副书记马国强涉嫌严重违纪违法正接受调查。</p>
 <p>官方履历显示，马国强现年51岁（1973年3月生），河南郑州人。</p>
 <p>曾在阿克苏地区工作多年，历任新和县委书记，阿克苏地委委员、阿克苏市委书记，阿克苏地委委员、政法委书记，昌吉州党委副书记、政法委书记，昌吉州人大常委会党组书记、副主任，新疆党委政法委副书记。是十届新疆党委候补委员。</p>
 <p>今年3月20日，马国强曾经的上级、新疆政协副主席窦万贵被查。其在阿克苏深耕12年，跻身高官序列。</p>
-<p>除了马国强、窦万贵，2020年以来阿克苏地区还有多名官员落马。</p>
 <p>2024年8月20日，时任新疆人大常委会阿克苏地区工委二级巡视员肖林被查。</p>
 <p>2024年2月3日，新疆纪委监委公开通报6起违反中央八项规定精神典型问题，其中提到阿克苏地委政法委原常务副书记孙学武违规收受礼金问题。孙学武还存在其他严重违纪违法问题，受到开除党籍、开除公职处分，涉嫌犯罪问题移送检方审查起诉。这是官方首次公布孙学武被查的消息。</p>
 <p>2023年5月22日，时任新疆政协阿克苏地区工委党组书记、副主任梁峰源被查。窦万贵在阿克苏地区任职期间，梁峰源历任阿克苏地区交通运输局局长、财政局局长，新疆政协阿克苏地区工委副主任，阿克苏地委委员、行署常务副专员，新疆政协阿克苏地区工委党组书记、副主任，2023年8月8日被免职。</p>
 <p>2022年11月16日，时任阿克苏地委副书记刘洪俊被查。他曾任阿克苏地区供销社党委副书记、主任，阿瓦提县委书记，阿克苏地区行署党组成员、副专员，阿克苏地委委员、行署党组成员、阿克苏市委书记，阿克苏地委委员、行署常务副专员，阿克苏地委副书记。</p>
 <p>2020年1月3日，时任阿克苏地区政协工委党组书记、副主任高克平被查。他在阿克苏地区工作了31年，2006年6月起历任拜城县委书记，阿克苏地委委员、库车县委书记、库车经开区党工委书记，阿克苏地区行署常务副专员；2016年9月任新疆政协阿克苏地区工委党组书记、副主任，直至被查。此后官方未再公布其被查进展。</p>
 <p>责任编辑：方晓</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275609.md#1">中国航油党委书记、董事长周强落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276103.md#1">上海市同济医院院长程英升落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315828.md#1">中国银行行长刘金缺席董事会会议 据传已落马</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/25/n14317386.md#1">调查：陆市场需求疲弱是最大痛点 小生意难做</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313719.md#1">形形色色的轮回转生 因为什么缘由？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313813.md#1">【未解之谜】CIA心灵部队（1）神秘人带来的特殊任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313716.md#1">贞观圣主（2）豪门贵女 雀屏选婿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312075.md#1">《倒数说爱你》观后感：从两可图形到双向救赎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14316902.md#1">【车评】大容量尾箱 2024 Hyundai Santa Fe XRT 2.5 AWD</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315500.md#1">【菁英论坛】纽时攻击神韵 犯常识错误</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316877.md#1">【新闻大破解】官媒异常 中南海内部权力或变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316379.md#1">【翻墙必看】中国很多人撑不下去了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315923.md#1">中共高调吹捧邓小平 专家：官场罕见躺平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315356.md#1">西方航空公司为何纷纷撤离中国 专家解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315872.md#1">新《侏罗纪》众演员开心出演 奥斯卡影后弃演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315424.md#1">杨颖现身港政协活动惹议 黄晓明新恋情登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315378.md#1">范冰冰街头等车形单影只 脚上一细节网友震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316436.md#1">真人《火影忍者》剧本完成 《尚气》导演执导</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316879.md#1">佟丽娅新片投资过亿 首日票房仅455万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311144.md#1">如何省钱？20年前的畅销书至今仍实用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315815.md#1">为何飞机客舱内都很冷？ 应该如何应对？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316374.md#1">白鹤芋多年不开花？ 用这招花20秒就可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314473.md#1">【一箪食】空气炸锅猪肋排</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14314817.md#1">3食物让血管变年轻 1运动防心梗</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/25/n14317478.htm">新疆官场地震 前政法委副书记马国强被开除党籍</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/25/n14317478.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
